--- a/src/main/resources/com/example/gymmanagergui/GymManagerView.fxml
+++ b/src/main/resources/com/example/gymmanagergui/GymManagerView.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<<<<<<< HEAD
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
@@ -22,14 +21,8 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
-=======
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
->>>>>>> 8bace7c70c02589f69fb2841be887642a6759afa
 
-<BorderPane fx:id="mainMenu" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="605.0" prefWidth="600.0" style="-fx-background-color: #ef912e;" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.gymmanagergui.GymManagerController">
+<BorderPane fx:id="mainMenu" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="605.0" prefWidth="600.0" style="-fx-background-color: #ef912e;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.gymmanagergui.GymManagerController">
    <left>
       <Pane prefHeight="505.0" prefWidth="50.0" BorderPane.alignment="CENTER" />
    </left>
@@ -57,7 +50,7 @@
    <center>
       <StackPane fx:id="menuScreens" prefHeight="264.0" prefWidth="363.0" BorderPane.alignment="CENTER">
          <children>
-            <Pane fx:id="startScreen" prefHeight="200.0" prefWidth="200.0" visible="false">
+            <Pane fx:id="startScreen" prefHeight="200.0" prefWidth="200.0">
                <children>
                   <Button fx:id="startButton" contentDisplay="CENTER" layoutX="77.0" layoutY="217.0" mnemonicParsing="false" onMouseClicked="#startGymManager" text="Start Gym Manager">
                      <font>
@@ -66,7 +59,7 @@
                   </Button>
                </children>
             </Pane>
-            <Pane fx:id="menuScreenButtons" prefHeight="492.0" prefWidth="231.0">
+            <Pane fx:id="menuScreenButtons" prefHeight="492.0" prefWidth="231.0" visible="false">
                <children>
                   <Label alignment="CENTER" layoutX="181.0" layoutY="1.0" prefHeight="27.0" prefWidth="89.0" text="Member">
                      <font>
@@ -319,7 +312,7 @@
                   </GridPane>
                </center>
             </BorderPane>
-            <BorderPane fx:id="dropOutScreen" prefHeight="200.0" prefWidth="200.0">
+            <BorderPane fx:id="dropOutScreen" prefHeight="200.0" prefWidth="200.0" visible="false">
                <center>
                   <GridPane BorderPane.alignment="CENTER">
                      <columnConstraints>
